2011-12-14  Anders Carlsson  <andersca@apple.com>

        binding a member function should ref/deref the object pointer if needed
        https://bugs.webkit.org/show_bug.cgi?id=74552

        Reviewed by Sam Weinig.

        Add new tests.

        * TestWebKitAPI/Tests/WTF/Functional.cpp:
        (TestWebKitAPI::B::B):
        (TestWebKitAPI::B::~B):
        (TestWebKitAPI::B::ref):
        (TestWebKitAPI::B::deref):
        (TestWebKitAPI::B::f):
        (TestWebKitAPI::B::g):
        (TestWebKitAPI::TEST):

2011-12-14  Hajime Morrita  <morrita@chromium.org>

        JS_INLINE and WTF_INLINE should be visible from WebCore
        https://bugs.webkit.org/show_bug.cgi?id=73191

        Reviewed by Kevin Ollivier.

        Removed macro definitions which is now provided by Platform.h

        * DumpRenderTree/chromium/config.h:
        * DumpRenderTree/config.h:
        * DumpRenderTree/ForwardingHeaders/runtime/JSExportMacros.h: Added.
        * DumpRenderTree/ForwardingHeaders/wtf/ExportMacros.h: Added.
        * DumpRenderTree/win/DumpRenderTreePreBuild.cmd: Add new ForwardingHeaders.
        * TestWebKitAPI/config.h:
        * WebKitTestRunner/config.h:

2011-12-14  Kentaro Hara  <haraken@chromium.org>

        Unreviewed, rolling out r102761.
        http://trac.webkit.org/changeset/102761
        https://bugs.webkit.org/show_bug.cgi?id=74485

        we came up with a better fix than this (see comments in bug
        74485)

        * Scripts/prepare-ChangeLog:
        (generateFunctionLists):
        (printDiff):
        (diffCommand):
        (statusCommand):
        (createPatchCommand):
        (generateFileList):
        (isAddedStatus):
        (isConflictStatus):
        (statusDescription):
        (extractLineRange):

2011-12-14  Anders Carlsson  <andersca@apple.com>

        Work around a bug in the MSVC2005 compiler
        https://bugs.webkit.org/show_bug.cgi?id=74550

        Reviewed by Sam Weinig.

        Re-enable tests.
