@@ -1,5 +1,15 @@
 2011-12-14  Anders Carlsson  <andersca@apple.com>
 
+        Windows build fix.
+
+        Move CHECKs out of the destructor.
+
+        * TestWebKitAPI/Tests/WTF/Functional.cpp:
+        (TestWebKitAPI::B::~B):
+        (TestWebKitAPI::TEST):
+
+2011-12-14  Anders Carlsson  <andersca@apple.com>
+
         binding a member function should ref/deref the object pointer if needed
         https://bugs.webkit.org/show_bug.cgi?id=74552
 
